# Aula06_bootcamp

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
